Fix admin podcast index table description para spacing
80px bottom padding on <p> ??

--- a/mediaplex/public/admin/styles/podcasts.css
+++ b/mediaplex/public/admin/styles/podcasts.css
@@ -47,7 +47,6 @@
 	min-width: 700px;
 }
 #podcast-table .info-content p {
-	padding-bottom: 80px;
 	line-height: 1.5em;
 	font-size: 14px;
 }
